--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,6 @@
-spring.datasource.url=jdbc:h2:~/test
+spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-
 spring.datasource.initialize=true
 
-# Number of ms to wait before throwing an exception if no connection is available.
-#spring.datasource.tomcat.max-wait=10000
-
-# Maximum number of active connections that can be allocated from this pool at the same time.
-#spring.datasource.tomcat.max-active=50
-
-# Validate the connection before borrowing it from the pool.
-#spring.datasource.tomcat.test-on-borrow=true
-
-
-spring.jpa.hibernate.ddl-auto=create-drop
